--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidSprint</string>
-    <string name="category">категория</string>
-    <string name="favorites">" изьранное"</string>
+    <string name="title_category">категория</string>
+    <string name="title_favorites">" избранное"</string>
 </resources>
