--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">AndroidSprint</string>
-    <string name="category">category</string>
-    <string name="favorites">favorites</string>
-
+    <string name="title_category">category</string>
+    <string name="title_favorites">favorites</string>
 </resources>
